--- a/frontend/modules/dashboard/css/product.css
+++ b/frontend/modules/dashboard/css/product.css
@@ -287,3 +287,9 @@ tbody tr:first-child {
 .hideBtn {
     display: none !important;
 }
+
+.importButton {
+    border: none;
+    background-color: rgba(255, 255, 255, 0);
+    font-size: 1.3em;
+}
