--- a/frontend/modules/dashboard/css/product.css
+++ b/frontend/modules/dashboard/css/product.css
@@ -266,6 +266,19 @@ tbody tr:first-child {
     padding: 0;
 }
 
+.couponAction {
+    width: 100%;
+    height: 60px;
+    position: relative;
+}
+
+.couponAction button {
+    width: 40%;
+    height: 50%;
+    margin: 0% 10%;
+    padding: 0;
+}
+
 .search-group {
     width: 50%;
 
